ok fix the text spacing

--- a/scss/partials/faq.scss
+++ b/scss/partials/faq.scss
@@ -78,7 +78,7 @@ $faq-anw:         $body-text;
           color: $faq-anw;
           display: none;
           margin-left: 30px;
-          margin-right: 10px;
+          margin-right: 20px;
           box-sizing: border-box;
           padding-top: 0px;
           visibility: hidden;
