--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ button {
           color: #2D3138;
           display: none;
           margin-left: 30px;
-          margin-right: 10px;
+          margin-right: 20px;
           box-sizing: border-box;
           padding-top: 0px;
           visibility: hidden;
